--- a/testbed/CMakeLists.txt
+++ b/testbed/CMakeLists.txt
@@ -68,6 +68,8 @@ set (TESTBED_SOURCE_FILES
 	tests/web.cpp
 	tests/wheel_joint.cpp
 	tests/wrecking_ball.cpp
+	tests/particles.cpp
+	tests/wavemachine.cpp
 )
 
 add_executable(testbed ${TESTBED_SOURCE_FILES})
